--- a/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
+++ b/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
@@ -241,5 +241,16 @@
         </Constraint>
       </Constraints>
     </Component>
+    <Component class="javax.swing.JTextField" name="commentText">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="comment from tenant"/>
+        <Property name="opaque" type="boolean" value="false"/>
+      </Properties>
+      <Constraints>
+        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
+          <AbsoluteConstraints x="70" y="520" width="540" height="120"/>
+        </Constraint>
+      </Constraints>
+    </Component>
   </SubComponents>
 </Form>
