--- a/src/main/java/uiDecoreted/ServiceAdmin/EmployeePanel.form
+++ b/src/main/java/uiDecoreted/ServiceAdmin/EmployeePanel.form
@@ -180,7 +180,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="lblOrg">
       <Properties>
         <Property name="text" type="java.lang.String" value="jLabel1"/>
       </Properties>
