--- a/src/main/java/uiDecoreted/ServiceAdmin/EnterprisePanel.form
+++ b/src/main/java/uiDecoreted/ServiceAdmin/EnterprisePanel.form
@@ -143,7 +143,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel6">
+    <Component class="javax.swing.JLabel" name="lblEnterType">
       <Properties>
         <Property name="text" type="java.lang.String" value="move"/>
       </Properties>
@@ -153,7 +153,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="lblNetwork">
       <Properties>
         <Property name="text" type="java.lang.String" value="jLabel4"/>
       </Properties>
