修改table显示的 条件

--- a/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
+++ b/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
@@ -243,6 +243,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="commentText">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="comment from tenant"/>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
