--- a/src/main/java/uiDecoreted/Housework/ViewHouseWorkOrderDetailPanel.form
+++ b/src/main/java/uiDecoreted/Housework/ViewHouseWorkOrderDetailPanel.form
@@ -23,6 +23,7 @@
   <SubComponents>
     <Component class="javax.swing.JTextField" name="commentText">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="No Comment Now"/>
         <Property name="opaque" type="boolean" value="false"/>
       </Properties>
