--- a/src/main/java/uiDecoreted/Mover/ViewMoveOrderDetailPanel.form
+++ b/src/main/java/uiDecoreted/Mover/ViewMoveOrderDetailPanel.form
@@ -248,6 +248,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="commentText">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="99" type="rgb"/>
         </Property>
