--- a/src/main/java/uiDecoreted/LandLord/AddOrderPanel.form
+++ b/src/main/java/uiDecoreted/LandLord/AddOrderPanel.form
@@ -27,6 +27,9 @@
           <Image iconType="3" name="/images/housepicture/housepic2.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="housepicMousePressed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="490" y="0" width="270" height="190"/>
