--- a/src/main/java/uiDecoreted/registerJFrame.form
+++ b/src/main/java/uiDecoreted/registerJFrame.form
@@ -79,6 +79,9 @@
           <Image iconType="3" name="/images/userLayer/Userpic.png"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="userPicMousePressed"/>
+      </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="160" y="20" width="120" height="120"/>
