--- a/src/main/java/uiDecoreted/LandLord/AddOrderPanel.form
+++ b/src/main/java/uiDecoreted/LandLord/AddOrderPanel.form
@@ -289,7 +289,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="address2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Price"/>
+        <Property name="text" type="java.lang.String" value="Price($/month)"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
