--- a/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
+++ b/src/main/java/uiDecoreted/Maintenance/ViewMaintanOrderDetailPanel.form
@@ -61,12 +61,13 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="220" y="120" width="300" height="210"/>
+          <AbsoluteConstraints x="290" y="70" width="300" height="210"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="txtemail">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semilight" size="14" style="1"/>
         </Property>
@@ -92,6 +93,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtphone">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semilight" size="14" style="1"/>
         </Property>
@@ -117,6 +119,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtname">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semilight" size="14" style="1"/>
         </Property>
@@ -142,6 +145,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtaddress">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semilight" size="14" style="1"/>
         </Property>
@@ -167,6 +171,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="txtearea">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Segoe UI Semilight" size="14" style="1"/>
         </Property>
@@ -207,6 +212,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="commentText">
       <Properties>
+        <Property name="editable" type="boolean" value="false"/>
         <Property name="text" type="java.lang.String" value="Comment from tennant"/>
       </Properties>
       <Constraints>
